feat: add usage instructions and dynamic loading support
Add usage instructions to the README_CN.md for Ubuntu 22.04 
and specify dependencies required for the project. 

Implement dynamic loading support in the hw_dcmi_sys and hw_dcmi 
modules, allowing the library to load DCMI dynamically based on 
environment variables. 

Deprecate the get_version method in favor of get_driver_version 
to streamline the API.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,6 @@
-[package]
-name = "hw_dcmi"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = ["crates/hw_dcmi", "crates/hw_dcmi_sys"]
+resolver = "2"
 
-[dependencies]
-
-[build-dependencies]
-bindgen = "0.70.1"
+[workspace.dependencies]
+libloading = { version = "0.8" }
